<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="2.5dp"
        android:text="@string/text_view_1_fragment_course_1_practical"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_query1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_query1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="2.5dp"
        android:layout_marginRight="2.5dp"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextResult1"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_query1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editTextResult1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="2.5dp"
        android:layout_marginRight="2.5dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_query1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/runBtn1"
        app:layout_constraintVertical_bias="0.5"/>

    <Button
        android:id="@+id/runBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_button_text_practical_course"
        app:layout_constraintTop_toBottomOf="@+id/editTextResult1"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="2.5dp"
        android:layout_marginRight="2.5dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:text="@string/text_view_2_fragment_course_1_practical"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_query2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runBtn1"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_query2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="2.5dp"
        android:layout_marginRight="2.5dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/editTextResult2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_query2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editTextResult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="2.5dp"
        android:layout_marginRight="2.5dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_query2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/runBtn2"
        app:layout_constraintVertical_bias="0.5"/>

    <Button
        android:id="@+id/runBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_button_text_practical_course"
        app:layout_constraintTop_toBottomOf="@+id/editTextResult2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="2.5dp"
        android:layout_marginRight="2.5dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/prevBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="2.5dp"
        android:layout_marginRight="2.5dp"
        android:text="@string/prev_button_text_practical_course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="2.5dp"
        android:layout_marginRight="2.5dp"
        android:text="@string/next_button_text_practical_course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>